@@ -1,3 +1,9 @@
+2014-09-10 huku <huku@grhack.net>
+
+    * Fixed bug in `decode()' of class `XED' (`xed_decode()' may fail when the
+      third parameter exceeds `XED_MAX_INSTRUCTION_BYTES').
+
+
 2014-09-09 huku <huku@grhack.net>
 
     * Added `InvalidExceptionError' exception class.
